fixed adaptive layout bugs

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  border-bottom: 1px solid rgba(84, 84, 84, .5);
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
   padding: 45px 0 41px 0;
   max-width: 880px;
   margin: 0 auto;
