--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,7 @@
 .profile__avatar {
   border-radius: 50%;
-  max-width: 120px;
+  width: 120px;
   aspect-ratio: 1 / 1;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
