--- a/blocks/profile/__button/_type/profile__button_type_edit.css
+++ b/blocks/profile/__button/_type/profile__button_type_edit.css
@@ -1,7 +1,7 @@
 .profile__button_type_edit {
   border-width: 1px;
-  width: 24px;
-  height: 24px;
+  min-width: 24px;
+  min-height: 24px;
   padding: 0;
   align-self: center;
   background-image: url(../../../../images/edit_icon.svg);
@@ -12,7 +12,7 @@
 @media screen and (max-width: 767px) {
   .profile__button_type_edit {
     padding: 5.25px;
-    max-width: 18px;
-    max-height: 18px;
+    min-width: 18px;
+    min-height: 18px;
   }
 }
