--- a/blocks/profile/__edit-area/profile__edit-area.css
+++ b/blocks/profile/__edit-area/profile__edit-area.css
@@ -8,5 +8,6 @@
   .profile__edit-area {
     justify-content: center;
     margin-bottom: 36px;
+    max-width: 282px;
   }
 }
